--- a/app/templates/my-local-government/index.hbs
+++ b/app/templates/my-local-government/index.hbs
@@ -65,7 +65,7 @@
           <AuDataTableThSortable
             @field="classification"
             @currentSorting={{this.sort}}
-            @label="Relevant voor type bestuur"
+            @label="Relevant voor"
           />
           <AuDataTableThSortable
             @field="organization"
