--- a/app/templates/processes/process/index.hbs
+++ b/app/templates/processes/process/index.hbs
@@ -117,7 +117,7 @@
                 </:content>
               </Item>
               <Item>
-                <:label>Relevant voor type bestuur</:label>
+                <:label>Relevant voor</:label>
                 <:content>
                   <Process::RelevantAdminUnitSelector
                     @selected={{this.process.relevantAdministrativeUnits}}
@@ -230,7 +230,7 @@
               </:content>
             </Item>
             <Item>
-              <:label>Relevant voor type bestuur</:label>
+              <:label>Relevant voor</:label>
               <:content>
                 {{#each
                   this.process.relevantAdministrativeUnits
