--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -7,9 +7,11 @@
 
 <AuModalContainer />
 <AuToaster />
-
 <AuApp>
   <AppHeader />
+  {{#if this.showNavigation}}
+    <ModuleNavigation />
+  {{/if}}
   <main id="main" class="au-c-main-container">
     <div
       class="au-c-main-container__content au-c-main-container__content--scroll au-u-flex au-u-flex--column"
