--- a/app/templates/reporting.hbs
+++ b/app/templates/reporting.hbs
@@ -1,3 +1,7 @@
+{{page-title "Rapportering"}}
+{{breadcrumb "Rapportering" route="reporting"}}
+<NavigationBar />
+
 <PageHeader>
   <:title>Rapportering</:title>
   <:subtitle>
