Add breadcrumb for process and refactor route logic

--- a/app/templates/processes/index.hbs
+++ b/app/templates/processes/index.hbs
@@ -126,7 +126,7 @@
               {{/if}}
               <LinkTo
                 class="au-c-link"
-                @model={{process.id}}
+                @model={{process}}
                 @route="processes.process"
               >
                 {{process.title}}
