--- a/app/templates/processes/process.hbs
+++ b/app/templates/processes/process.hbs
@@ -1,4 +1,3 @@
-{{page-title this.model.name}}
-
-{{breadcrumb this.model.name route="processes.process" models=this.model.id}}
+{{page-title this.model.title}}
+{{breadcrumb this.model.title route="processes.process" models=this.model.id}}
 {{outlet}}
