--- a/app/components/navigation-bar.hbs
+++ b/app/components/navigation-bar.hbs
@@ -5,7 +5,7 @@
     >
       <li class="au-c-list-horizontal__item">
         <AuLink @route="index" @icon="arrow-left" @iconAlignment="left">
-          Overzicht
+          Overzicht modules
         </AuLink>
       </li>
       {{#each (breadcrumbs) as |breadcrumb|}}
