--- a/app/templates/processes/index.hbs
+++ b/app/templates/processes/index.hbs
@@ -122,7 +122,7 @@
               class="au-u-flex au-u-flex--spaced-tiny au-u-flex--vertical-center"
             >
               {{#if process.isBlueprint}}
-                <CustomIcon @icon={{"blueprint"}} @size="large" />
+                <CustomIcon @icon="blueprint" @size="large" />
               {{/if}}
               <LinkTo
                 class="au-c-link"
