fix linter errors

--- a/app/components/bpmn-viewer.hbs
+++ b/app/components/bpmn-viewer.hbs
@@ -1,3 +1,4 @@
+{{! template-lint-disable no-at-ember-render-modifiers }}
 <div
   class="bpmn-container au-u-margin-top-small"
   {{did-insert this.setupViewer}}
