--- a/app/components/pdf-viewer.hbs
+++ b/app/components/pdf-viewer.hbs
@@ -1,3 +1,4 @@
+{{! template-lint-disable no-at-ember-render-modifiers }}
 <div
   class="bpmn-container au-u-margin-top-small au-u-flex au-u-flex--center au-u-flex--vertical-center"
   {{did-insert this.setupViewer}}
