Display validation messages on input fields (#97)
* Move process details to separate component

* Move ipdc multiple select component

* Add red outline to invalid input boxes

* Show validation messages

* Add validation to ICR fields

* Don't use deprecated array functions

Co-authored-by: andreo141 <82985453+andreo141@users.noreply.github.com>

* Format code

* Merge branch 'development' into feature/show-validation-messages

--- a/app/templates/processes/process/index.hbs
+++ b/app/templates/processes/process/index.hbs
@@ -1,4 +1,4 @@
-{{#if this.isEditing}}
+{{#if this.isEditingDetails}}
   <PageHeader>
     <:title>
       Wijzig proces
@@ -21,267 +21,12 @@
 {{/if}}
 
 <AuBodyContainer class="au-o-box au-o-flow" @scroll={{true}}>
-  {{#if this.isEditing}}
-    <form {{on "submit" (perform this.updateModel)}}>
-      <DataCard>
-        <:title>
-          Algemene informatie
-        </:title>
-        <:header>
-          <div class="au-u-flex au-u-flex--spaced-small au-u-flex--end">
-            <AuButton
-              @skin="secondary"
-              {{on "click" this.resetModel}}
-            >Annuleer</AuButton>
-            <AuButton
-              @skin="primary"
-              type="submit"
-              @loading={{this.updateModel.isRunning}}
-              @disabled={{or this.updateModel.isRunning (not this.formIsValid)}}
-            >Bewaar</AuButton>
-          </div>
-        </:header>
-        <:card as |Card|>
-          <Card.Columns>
-            <:left as |Item|>
-              <Item>
-                <:label>Titel</:label>
-                <:content>
-                  <AuInput
-                    value={{this.process.title}}
-                    {{on "input" this.setProcessTitle}}
-                    @width="block"
-                    @disabled={{not this.canEdit}}
-                  />
-                </:content>
-              </Item>
-              <Item>
-                <:label>Beschrijving</:label>
-                <:content>
-                  <AuTextarea
-                    value={{this.process.description}}
-                    {{on "input" this.setProcessDescription}}
-                    rows="4"
-                    @width="block"
-                    @disabled={{not this.canEdit}}
-                  />
-                </:content>
-              </Item>
-              <Item>
-                <:label>Contact proces</:label>
-                <:content>
-                  <AuInput
-                    value={{this.process.email}}
-                    {{on "input" this.setProcessEmail}}
-                    @width="block"
-                    @disabled={{not this.canEdit}}
-                  />
-                </:content>
-              </Item>
-              <Item>
-                <:label>Link naar IPDC/LPDC</:label>
-                <:content>
-                  <IpdcMultipleSelect
-                    @selected={{this.draftIpdcProducts}}
-                    @onChange={{this.setDraftIpdcProducts}}
-                    @disabled={{not this.canEdit}}
-                  />
-                  <div class="au-u-flex au-u-flex--between">
-                    <AuHelpText
-                      @skin="secondary"
-                      class="au-u-margin-top-none au-u-flex-self-start"
-                    >
-                      Vul hier IPDC-productcodes of -URLs in.
-                    </AuHelpText>
-                    <AuLinkExternal
-                      class="au-u-flex-self-start"
-                      href="https://productencatalogus-v3.vlaanderen.be/nl/producten"
-                    >
-                      Zoek in IPDC
-                    </AuLinkExternal>
-                  </div>
-                </:content>
-              </Item>
-            </:left>
-            <:right as |Item|>
-              <Item>
-                <:label>Bestuur</:label>
-                <:content>
-                  {{this.process.publisher.name}}
-                </:content>
-              </Item>
-              <Item>
-                <:label>Type bestuur</:label>
-                <:content>
-                  {{this.process.publisher.classification.label}}
-                </:content>
-              </Item>
-              <Item>
-                <:label>Relevant voor</:label>
-                <:content>
-                  <Process::RelevantAdminUnitSelector
-                    @selected={{this.process.relevantAdministrativeUnits}}
-                    @onChange={{this.setRelevantAdministrativeUnit}}
-                  />
-                </:content>
-              </Item>
-              <Item>
-                <:label>Emailadres bestuur</:label>
-                <:content>
-                  {{or
-                    (contact-email this.process.publisher.primarySite.contacts)
-                    "/"
-                  }}
-                </:content>
-              </Item>
-              <Item>
-                <:label>Aangemaakt op</:label>
-                <:content>
-                  {{date-format this.process.created true}}
-                </:content>
-              </Item>
-              <Item>
-                <:label>Wij gebruiken dit proces</:label>
-                <:content>
-                  <AuCheckbox
-                    @checked={{this.processUsedByUs}}
-                    @onChange={{this.setProcessUsedByUs}}
-                  />
-                </:content>
-              </Item>
-              {{#if this.process.isPublishedByAbbOrDv}}
-                <Item>
-                  <:label>Blauwdruk</:label>
-                  <:content>
-                    <AuToggleSwitch
-                      @onChange={{this.toggleBlueprintStatus}}
-                      @checked={{this.process.isBlueprint}}
-                      @disabled={{not this.canEdit}}
-                    />
-                  </:content>
-                </Item>
-              {{/if}}
-            </:right>
-          </Card.Columns>
-        </:card>
-      </DataCard>
-    </form>
-  {{else}}
-    <DataCard>
-      <:title>
-        Algemene informatie
-      </:title>
-      <:header>
-        {{#unless this.currentSession.readOnly}}
-          <AuButton
-            @skin="naked"
-            @icon="pencil"
-            {{on "click" this.toggleEdit}}
-          >Wijzig</AuButton>
-        {{/unless}}
-      </:header>
-      <:card as |Card|>
-        <Card.Columns>
-          <:left as |Item|>
-            <Item>
-              <:label>Titel</:label>
-              <:content>
-                {{this.process.title}}
-              </:content>
-            </Item>
-            <Item>
-              <:label>Beschrijving</:label>
-              <:content>
-                {{or this.process.description "/"}}
-              </:content>
-            </Item>
-            <Item>
-              <:label>Contact proces</:label>
-              <:content>
-                {{or this.process.email "/"}}
-              </:content>
-            </Item>
-            <Item>
-              <:label>Link naar IPDC/LPDC</:label>
-              <:content>
-                {{#if this.process.ipdcProducts.length}}
-                  {{#each this.process.ipdcProducts as |product|}}
-                    <AuLinkExternal href="{{product.url}}" class="au-u-flex">
-                      {{language-string-set-nl product.name}}
-                    </AuLinkExternal>
-                  {{/each}}
-                {{else}}
-                  /
-                {{/if}}
-              </:content>
-            </Item>
-          </:left>
-          <:right as |Item|>
-            <Item>
-              <:label>Bestuur</:label>
-              <:content>
-                {{this.process.publisher.name}}
-              </:content>
-            </Item>
-            <Item>
-              <:label>Type bestuur</:label>
-              <:content>
-                {{this.process.publisher.classification.label}}
-              </:content>
-            </Item>
-            <Item>
-              <:label>Relevant voor</:label>
-              <:content>
-                {{#each
-                  this.process.relevantAdministrativeUnits
-                  as |relevantAdministrativeUnit|
-                }}
-                  <ul><li>
-                      {{relevantAdministrativeUnit.label}}
-                    </li></ul>
-                {{/each}}
-              </:content>
-            </Item>
-            <Item>
-              <:label>Emailadres bestuur</:label>
-              <:content>
-                {{or
-                  (contact-email this.process.publisher.primarySite.contacts)
-                  "/"
-                }}
-              </:content>
-            </Item>
-            <Item>
-              <:label>Aangemaakt op</:label>
-              <:content>
-                {{date-format this.process.created true}}
-              </:content>
-            </Item>
-            <Item>
-              <:label>Wij gebruiken dit proces</:label>
-              <:content>
-                <AuCheckbox
-                  @disabled={{not this.isEditing}}
-                  @checked={{this.processUsedByUs}}
-                />
-              </:content>
-            </Item>
-            {{#if this.process.isPublishedByAbbOrDv}}
-              <Item>
-                <:label>Blauwdruk</:label>
-                <:content>
-                  <AuToggleSwitch
-                    @disabled={{not this.isEditing}}
-                    @checked={{this.process.isBlueprint}}
-                  />
-                </:content>
-              </Item>
-            {{/if}}
-          </:right>
-        </Card.Columns>
-      </:card>
-    </DataCard>
-  {{/if}}
+  {{! Details }}
+  <Process::DetailsCard
+    @canEdit={{this.canEdit}}
+    @process={{this.process}}
+    @setIsEditing={{this.setIsEditingDetails}}
+  />
 
   <div class="au-o-grid au-o-grid--tiny au-u-margin-top">
 
