--- a/app/components/process-select-by-classification.hbs
+++ b/app/components/process-select-by-classification.hbs
@@ -1,3 +1,4 @@
+{{! template-lint-disable no-at-ember-render-modifiers }}
 <div class={{if @error "ember-power-select--error"}} ...attributes>
   <PowerSelectMultiple
     {{did-insert this.loadProcessClassificationsTask.perform}}
