Fetch relevant admin unit using trackedTask

--- a/app/components/process/relevant-admin-unit-selector.hbs
+++ b/app/components/process/relevant-admin-unit-selector.hbs
@@ -1,15 +1,13 @@
-{{! template-lint-disable no-at-ember-render-modifiers }}
 <div class={{if @error "ember-power-select--error"}} ...attributes>
   <PowerSelectMultiple
-    {{did-insert this.loadProcessClassificationsTask.perform}}
     @loadingMessage="Aan het laden..."
     @noMatchesMessage="Geen resultaten"
     @options={{this.relevantAdministrativeUnits}}
     @selected={{@selected}}
     @onChange={{@onChange}}
     @triggerId={{@id}}
-    as |classification|
+    as |unit|
   >
-    {{classification.label}}
+    {{unit.label}}
   </PowerSelectMultiple>
 </div>
