--- a/app/components/process/diagram/visual.hbs
+++ b/app/components/process/diagram/visual.hbs
@@ -1,98 +1,96 @@
 {{! Latest diagram }}
-<div class="au-o-grid__item">
 
-  {{! Latest diagram - Title }}
-  <div class="au-u-flex au-u-flex--between au-u-margin-bottom-small">
-    <AuHeading @level="2" @skin="3">Diagram</AuHeading>
-    <AuButtonGroup>
-      {{#if @canEdit}}
-        <AuButton
-          @skin="secondary"
-          {{on "click" @openReplaceModal}}
-        >Vervang</AuButton>
-      {{/if}}
-      {{#if @latestDiagram}}
-        <AuButton {{on "click" @openDownloadModal}}>
-          Download
-        </AuButton>
-      {{/if}}
-    </AuButtonGroup>
-  </div>
-
-  {{! Latest diagram - Visual }}
-  <div>
-    {{#if @latestDiagramIsLoading}}
-      <AuLoader />
-    {{else if @latestDiagramHasErrored}}
-      <AuAlert @title="Niet gevonden" @skin="warning" @icon="alert-triangle">
-        Er ging iets mis bij het ophalen van het diagram. Probeer later opnieuw.
-      </AuAlert>
-    {{else if
-      (and
-        @latestDiagram (or @latestDiagram.isBpmnFile @latestDiagram.isVisioFile)
-      )
-    }}
-      <AuHelpText @skin="tertiary" class="au-u-margin-top-none">
-        Klik en hou vast om diagram te bedienen. Gebruik ctrl en scrollwiel om
-        in en uit te zoomen. Klik elders om bediening uit te schakelen.
-      </AuHelpText>
-      {{#if @latestDiagram.isBpmnFile}}
-        <BpmnViewer
-          @diagram={{@latestDiagram}}
-          @onBpmnLoaded={{@setLatestDiagramAsBpmn}}
-          @onSvgLoaded={{@setLatestDiagramAsSvg}}
-        />
-      {{else if @latestDiagram.isVisioFile}}
-        <PdfViewer @diagram={{@latestDiagram}} />
-      {{/if}}
-      <DataCard class="au-u-margin-top-small">
-        <:header></:header>
-        <:title>
-          Metadata
-        </:title>
-        <:card as |Card|>
-          <Card.Columns>
-            <:left as |Item|>
-              <Item>
-                <:label>Bestandsnaam</:label>
-                <:content>
-                  {{@latestDiagram.name}}
-                </:content>
-              </Item>
-              <Item>
-                <:label>Toegevoegd op</:label>
-                <:content>
-                  {{date-format @latestDiagram.modified true}}
-                </:content>
-              </Item>
-            </:left>
-            <:right as |Item|>
-              <Item>
-                <:label>Grootte</:label>
-                <:content>
-                  {{file-size-format @latestDiagram.size}}
-                </:content>
-              </Item>
-              <Item>
-                <:label>Extensie</:label>
-                <:content>
-                  {{@latestDiagram.extension}}
-                </:content>
-              </Item>
-              <Item>
-                <:label>Formaat</:label>
-                <:content>
-                  {{@latestDiagram.format}}
-                </:content>
-              </Item>
-            </:right>
-          </Card.Columns>
-        </:card>
-      </DataCard>
-    {{else}}
-      <AuAlert @title="Niet gevonden" @skin="warning" @icon="alert-triangle">
-        Er werd geen diagram gevonden voor dit proces.
-      </AuAlert>
+{{! Latest diagram - Title }}
+<div class="au-u-flex au-u-flex--between au-u-margin-bottom-small">
+  <AuHeading @level="2" @skin="3">Diagram</AuHeading>
+  <AuButtonGroup>
+    {{#if @canEdit}}
+      <AuButton
+        @skin="secondary"
+        {{on "click" @openReplaceModal}}
+      >Vervang</AuButton>
     {{/if}}
-  </div>
+    {{#if @latestDiagram}}
+      <AuButton {{on "click" @openDownloadModal}}>
+        Download
+      </AuButton>
+    {{/if}}
+  </AuButtonGroup>
+</div>
+
+{{! Latest diagram - Visual }}
+<div>
+  {{#if this.latestDiagramIsLoading}}
+    <AuLoader />
+  {{else if this.latestDiagramHasErrored}}
+    <AuAlert @title="Niet gevonden" @skin="warning" @icon="alert-triangle">
+      Er ging iets mis bij het ophalen van het diagram. Probeer later opnieuw.
+    </AuAlert>
+  {{else if
+    (and
+      @latestDiagram (or @latestDiagram.isBpmnFile @latestDiagram.isVisioFile)
+    )
+  }}
+    <AuHelpText @skin="tertiary" class="au-u-margin-top-none">
+      Klik en hou vast om diagram te bedienen. Gebruik ctrl en scrollwiel om in
+      en uit te zoomen. Klik elders om bediening uit te schakelen.
+    </AuHelpText>
+    {{#if @latestDiagram.isBpmnFile}}
+      <BpmnViewer
+        @diagram={{@latestDiagram}}
+        @onBpmnLoaded={{@setLatestDiagramAsBpmn}}
+        @onSvgLoaded={{@setLatestDiagramAsSvg}}
+      />
+    {{else if @latestDiagram.isVisioFile}}
+      <PdfViewer @diagram={{@latestDiagram}} />
+    {{/if}}
+    <DataCard class="au-u-margin-top-small">
+      <:header></:header>
+      <:title>
+        Metadata
+      </:title>
+      <:card as |Card|>
+        <Card.Columns>
+          <:left as |Item|>
+            <Item>
+              <:label>Bestandsnaam</:label>
+              <:content>
+                {{@latestDiagram.name}}
+              </:content>
+            </Item>
+            <Item>
+              <:label>Toegevoegd op</:label>
+              <:content>
+                {{date-format @latestDiagram.modified true}}
+              </:content>
+            </Item>
+          </:left>
+          <:right as |Item|>
+            <Item>
+              <:label>Grootte</:label>
+              <:content>
+                {{file-size-format @latestDiagram.size}}
+              </:content>
+            </Item>
+            <Item>
+              <:label>Extensie</:label>
+              <:content>
+                {{@latestDiagram.extension}}
+              </:content>
+            </Item>
+            <Item>
+              <:label>Formaat</:label>
+              <:content>
+                {{@latestDiagram.format}}
+              </:content>
+            </Item>
+          </:right>
+        </Card.Columns>
+      </:card>
+    </DataCard>
+  {{else}}
+    <AuAlert @title="Niet gevonden" @skin="warning" @icon="alert-triangle">
+      Er werd geen diagram gevonden voor dit proces.
+    </AuAlert>
+  {{/if}}
 </div>
