--- a/app/templates/processes/process/index.hbs
+++ b/app/templates/processes/process/index.hbs
@@ -69,14 +69,15 @@
     @downloadAttachments={{this.downloadAttachments}}
     @attachmentsAreLoading={{this.attachmentsAreLoading}}
     @pageAttachments={{this.pageAttachments}}
-    sortAttachments={{this.sortAttachments}}
+    @sortAttachments={{this.sortAttachments}}
+    @sizeAttachments={{this.sizeAttachments}}
     @attachmentsHaveErrored={{this.attachmentsHaveErrored}}
     @attachmentsHaveNoResults={{this.attachmentsHaveNoResults}}
     @downloadFile={{this.downloadFile}}
     @openDeleteModal={{this.openDeleteModal}}
+    @openAddModal={{this.openAddModal}}
   />
 
-  {{! </div> }}
 </AuBodyContainer>
 
 <Process::Modals
