--- a/app/components/process/diagram/version.hbs
+++ b/app/components/process/diagram/version.hbs
@@ -1,12 +1,12 @@
 <DataCard>
   <:title>Versies</:title>
-  <:header>
-    <AuHelpText @skin="secondary" class="au-u-margin-top-none">
+  <:header></:header>
+  <:subheader>
+    <AuHelpText @skin="secondary">
       Ontdek hier vorige versies van het diagram van dit proces, geüpload in het
       Open Proces Huis. Deze versies zijn beschikbaar om te downloaden.
-    </AuHelpText>
+    </AuHelpText></:subheader>
 
-  </:header>
   <:card>
     <AuDataTable
       @content={{@diagrams}}
