--- a/app/components/bpmn-viewer/index.hbs
+++ b/app/components/bpmn-viewer/index.hbs
@@ -1,8 +1,23 @@
-<div
-  class="bpmn-container au-u-margin-top-small"
-  {{this.bpmnViewer
-    diagram=@diagram
-    onBpmnLoaded=@onBpmnLoaded
-    onSvgLoaded=@onSvgLoaded
-  }}
-></div>
+{{#if this.hasError}}
+  <AuAlert
+    @title="Weergavefout"
+    @skin="warning"
+    @icon="alert-triangle"
+  >
+    Er ging iets mis tijdens het visualiseren van het diagram.
+  </AuAlert>
+{{else}}
+  <AuHelpText @skin="tertiary" class="au-u-margin-top-none">
+    Klik en hou vast om diagram te bedienen. Gebruik ctrl en scrollwiel
+    om in en uit te zoomen. Klik elders om bediening uit te schakelen.
+  </AuHelpText>
+  <div
+    class="bpmn-container au-u-margin-top-small"
+    {{this.bpmnViewer
+      diagram=@diagram
+      onBpmnLoaded=@onBpmnLoaded
+      onSvgLoaded=@onSvgLoaded
+      onError=this.setError
+    }}
+  ></div>
+{{/if}}
