--- a/app/components/pdf-viewer/index.hbs
+++ b/app/components/pdf-viewer/index.hbs
@@ -1,3 +1,7 @@
+<AuHelpText @skin="tertiary" class="au-u-margin-top-none">
+  Klik en hou vast om diagram te bedienen. Gebruik ctrl en scrollwiel
+  om in en uit te zoomen. Klik elders om bediening uit te schakelen.
+</AuHelpText>
 <div
   class="bpmn-container au-u-margin-top-small au-u-flex au-u-flex--center au-u-flex--vertical-center"
   {{this.pdfViewer
