--- a/app/templates/my-local-government.hbs
+++ b/app/templates/my-local-government.hbs
@@ -1,5 +1,5 @@
-{{page-title "Mijn lokaal bestuur"}}
-{{breadcrumb "Mijn lokaal bestuur" route="my-local-government"}}
+{{page-title "Processen mijn bestuur"}}
+{{breadcrumb "Processen mijn bestuur" route="my-local-government"}}
 
 <div class="au-c-body-container au-c-body-container--scroll">
   <NavigationBar />
