--- a/app/templates/processes.hbs
+++ b/app/templates/processes.hbs
@@ -1,5 +1,5 @@
-{{page-title "Processen"}}
-{{breadcrumb "Processen" route="processes"}}
+{{page-title "Alle processen"}}
+{{breadcrumb "Alle processen" route="processes"}}
 
 <div class="au-c-body-container au-c-body-container--scroll">
   <NavigationBar />
